welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:9: error: not found: value estSurBlanc
	} while (!estSurBlanc())
                  ^PictureMono:15: error: not found: value estSurBlanc
	} while (estSurBlanc())
                 ^