welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
	def faireV(){
	do {
		avance()
		baisseBrosse()
		leveBrosse()
	} while (!estSurBlanc())
	do {
		avance()
		gauche()
		avance()
	
	} while (estSurBlanc())
}

}
